--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "iron-man/sylius-product-on-demand-plugin",
     "description": "Plugin allowing to mark product variants as available on demand in Sylius.",
+    "version": "1.0.0",
     "type": "sylius-plugin",
     "keywords": [
         "sylius",
