--- a/src/Resources/config/app/routing/shop/routing.yaml
+++ b/src/Resources/config/app/routing/shop/routing.yaml
@@ -1,5 +1,5 @@
-sylius_shop_default_locale:
-    path: /
+ironman_test_page:
+    path: /ironman-test
     methods: [GET]
     defaults:
         _controller: ironman.sylius_product_on_demand_plugin.controller.test_controller::index
